Add support for running the server on java 9/10