@@ -31,7 +31,10 @@ import static org.hibernate.cfg.Environment.GENERATE_STATISTICS;
  * @understands how to run a local development mode webserver so we can develop live
  * Set the following before running the main method:
  * Working directory: <project-path>/server
- * VM arguments: -Xms512m -Xmx1024m -Djava.awt.headless=true
+ * VM arguments:
+ *      -Xms512m -Xmx1024m -Djava.awt.headless=true
+ * If running on java >=9, add the following VM args
+ *      --add-modules=java.se,java.xml.bind,java.xml.ws.annotation
  * classpath: Use classpath of 'development-server'
  */
 
